<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgregarFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/nuevo"
        android:padding="15dp"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/eId_Codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/codigo"
        android:padding="15dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/eNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:padding="15dp"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/eCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad"
        android:padding="15dp"
        android:textSize="25dp"/>

    <EditText
        android:id="@+id/ePrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio"
        android:padding="15dp"
        android:textSize="25dp" />

    <Button
        android:id="@+id/bGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:textSize="25dp"
        android:text="@string/Guardar" />

</LinearLayout>